--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@geist-ui/react": "^2.1.4",
+    "@geist-ui/react-icons": "^1.0.1",
+    "@svgr/webpack": "^5.5.0",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.8"
   }
 }
