--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@geist-ui/react-icons": "^1.0.1",
     "@svgr/webpack": "^5.5.0",
     "next": "10.1.3",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "sass": "^1.32.8"
   }
 }
