--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "next": "10.1.3",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-countdown": "^2.3.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "sass": "^1.32.8"
   }
 }
