--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "typed-countries": "^1.1.1"
   }
 }
