--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.1.0",
     "@egjs/react-flicking": "^3.7.1",
     "@geist-ui/react": "^2.1.4",
     "@geist-ui/react-icons": "^1.0.1",
     "@svgr/webpack": "^5.5.0",
-    "next": "10.1.3",
+    "next": "^11.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-countdown": "^2.3.1",
