--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geist-ui/react": "^2.1.4",
     "@geist-ui/react-icons": "^1.0.1",
     "@svgr/webpack": "^5.5.0",
+    "framer-motion": "^4.1.17",
     "next": "^11.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
@@ -20,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-use": "^17.2.4",
     "sass": "^1.32.8",
     "typed-countries": "^1.1.1"
   }
