--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geist-ui/react": "^2.1.4",
     "@geist-ui/react-icons": "^1.0.1",
     "@svgr/webpack": "^5.5.0",
+    "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
     "next": "^11.0.1",
     "nprogress": "^0.2.0",
